# mygpoclient-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  commit-msg.sh  pre-commit.sh  set-credentials.sh
src/: client.rs  device.rs  directory.rs  episode.rs  error.rs  favorite.rs  lib.rs  settings.rs  subscription.rs  suggestion.rs
tests/: device.rs  directory.rs  favorite.rs  integration_test.rs  settings.rs  subscription.rs  suggestion.rs
