[package]
name = "libmygpo-rs"
version = "0.1.0"
authors = ["FeuRenard <feurenard@posteo.de>"]
edition = "2018"
description = "Client library for gpodder.net API"
repository = "https://github.com/FeuRenard/libmygpo-rs"
readme = "README.md"
keywords = ["podcast","podcasts","gPodder","gpodder.net"]
categories = ["api-bindings"]
license = "GPL-3.0-only"

[badges]
travis-ci = { repository = "FeuRenard/libmygpo-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
reqwest = "^0.9"
serde = "^1"
serde_json = "^1"
