[package]
name = "mygpoclient"
version = "0.1.0"
authors = ["FeuRenard <feurenard@posteo.de>"]
edition = "2018"
description = "Client library for gpodder.net API"
repository = "https://github.com/FeuRenard/mygpoclient-rs"
readme = "README.md"
keywords = ["podcast","podcasts","gPodder","gpodder.net"]
categories = ["api-bindings"]
license = "GPL-3.0-only"

[badges]
travis-ci = { repository = "FeuRenard/mygpoclient-rs", branch = "master" }
maintenance = { status = "actively-developed" }
codecov = { repository = "FeuRenard/mygpoclient-rs" }
coveralls = { repository = "FeuRenard/mygpoclient-rs" }

[dependencies]
reqwest = { version = "^0.10", features = ["blocking", "json"] }
serde = { version = "^1.0", features = ["derive"]}
